@@ -22,20 +22,25 @@ import org.elasticsearch.client.Client;
 import org.elasticsearch.cluster.metadata.IndexMetaData;
 import org.elasticsearch.cluster.metadata.MappingMetaData;
 import org.elasticsearch.common.Nullable;
-import org.elasticsearch.common.collect.ImmutableOpenMap;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.index.IndexSortConfig;
+import org.elasticsearch.index.mapper.FieldAliasMapper;
+import org.elasticsearch.index.mapper.KeywordFieldMapper;
 import org.elasticsearch.search.sort.SortOrder;
 import org.elasticsearch.xpack.core.ClientHelper;
 import org.elasticsearch.xpack.core.ml.dataframe.DataFrameAnalyticsConfig;
+import org.elasticsearch.xpack.core.ml.dataframe.DataFrameAnalyticsDest;
+import org.elasticsearch.xpack.core.ml.utils.ExceptionsHelper;
 
 import java.time.Clock;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.Iterator;
 import java.util.Map;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.Supplier;
 
+import static org.elasticsearch.common.xcontent.support.XContentMapValues.extractValue;
 import static org.elasticsearch.xpack.core.ClientHelper.ML_ORIGIN;
 
 /**
@@ -81,10 +86,10 @@ public final class DataFrameAnalyticsIndex {
     }
 
     private static void prepareCreateIndexRequest(Client client, Clock clock, DataFrameAnalyticsConfig config,
-                                                         ActionListener<CreateIndexRequest> listener) {
+                                                  ActionListener<CreateIndexRequest> listener) {
         AtomicReference<Settings> settingsHolder = new AtomicReference<>();
 
-        ActionListener<ImmutableOpenMap<String, MappingMetaData>> mappingsListener = ActionListener.wrap(
+        ActionListener<MappingMetaData> mappingsListener = ActionListener.wrap(
             mappings -> listener.onResponse(createIndexRequest(clock, config, settingsHolder.get(), mappings)),
             listener::onFailure
         );
@@ -102,25 +107,25 @@ public final class DataFrameAnalyticsIndex {
             listener::onFailure
         );
 
-        GetSettingsRequest getSettingsRequest = new GetSettingsRequest();
-        getSettingsRequest.indices(config.getSource().getIndex());
-        getSettingsRequest.indicesOptions(IndicesOptions.lenientExpandOpen());
-        getSettingsRequest.names(PRESERVED_SETTINGS);
-        ClientHelper.executeWithHeadersAsync(config.getHeaders(), ML_ORIGIN, client, GetSettingsAction.INSTANCE,
-            getSettingsRequest, getSettingsResponseListener);
+        GetSettingsRequest getSettingsRequest =
+            new GetSettingsRequest()
+                .indices(config.getSource().getIndex())
+                .indicesOptions(IndicesOptions.lenientExpandOpen())
+                .names(PRESERVED_SETTINGS);
+        ClientHelper.executeWithHeadersAsync(
+            config.getHeaders(), ML_ORIGIN, client, GetSettingsAction.INSTANCE, getSettingsRequest, getSettingsResponseListener);
     }
 
     private static CreateIndexRequest createIndexRequest(Clock clock, DataFrameAnalyticsConfig config, Settings settings,
-                                                         ImmutableOpenMap<String, MappingMetaData> mappings) {
-        // There should only be 1 type
-        assert mappings.size() == 1;
-
+                                                         MappingMetaData mappings) {
         String destinationIndex = config.getDest().getIndex();
-        String type = mappings.keysIt().next();
-        Map<String, Object> mappingsAsMap = mappings.valuesIt().next().sourceAsMap();
-        addProperties(mappingsAsMap);
-        addMetaData(mappingsAsMap, config.getId(), clock);
-        return new CreateIndexRequest(destinationIndex, settings).mapping(type, mappingsAsMap);
+        Map<String, Object> mappingsAsMap = mappings.sourceAsMap();
+        Map<String, Object> properties = getOrPutDefault(mappingsAsMap, PROPERTIES, HashMap::new);
+        checkResultsFieldIsNotPresentInProperties(config, properties);
+        properties.putAll(createAdditionalMappings(config, Collections.unmodifiableMap(properties)));
+        Map<String, Object> metadata = getOrPutDefault(mappingsAsMap, META, HashMap::new);
+        metadata.putAll(createMetaData(config.getId(), clock));
+        return new CreateIndexRequest(destinationIndex, settings).mapping(mappingsAsMap);
     }
 
     private static Settings settings(GetSettingsResponse settingsResponse) {
@@ -153,17 +158,43 @@ public final class DataFrameAnalyticsIndex {
         return maxValue;
     }
 
-    private static void addProperties(Map<String, Object> mappingsAsMap) {
-        Map<String, Object> properties = getOrPutDefault(mappingsAsMap, PROPERTIES, HashMap::new);
-        properties.put(ID_COPY, Map.of("type", "keyword"));
+    @SuppressWarnings("unchecked")
+    private static Map<String, Object> createAdditionalMappings(DataFrameAnalyticsConfig config, Map<String, Object> mappingsProperties) {
+        Map<String, Object> properties = new HashMap<>();
+        properties.put(ID_COPY, Map.of("type", KeywordFieldMapper.CONTENT_TYPE));
+        for (Map.Entry<String, String> entry
+                : config.getAnalysis().getExplicitlyMappedFields(config.getDest().getResultsField()).entrySet()) {
+            String destFieldPath = entry.getKey();
+            String sourceFieldPath = entry.getValue();
+            Object sourceFieldMapping = extractMapping(sourceFieldPath, mappingsProperties);
+            if (sourceFieldMapping instanceof Map) {
+                Map<String, Object> sourceFieldMappingAsMap = (Map) sourceFieldMapping;
+                // If the source field is an alias, fetch the concrete field that the alias points to.
+                if (FieldAliasMapper.CONTENT_TYPE.equals(sourceFieldMappingAsMap.get("type"))) {
+                    String path = (String) sourceFieldMappingAsMap.get(FieldAliasMapper.Names.PATH);
+                    sourceFieldMapping = extractMapping(path, mappingsProperties);
+                }
+            }
+            // We may have updated the value of {@code sourceFieldMapping} in the "if" block above.
+            // Hence, we need to check the "instanceof" condition again.
+            if (sourceFieldMapping instanceof Map) {
+                properties.put(destFieldPath, sourceFieldMapping);
+            }
+        }
+        return properties;
     }
 
-    private static void addMetaData(Map<String, Object> mappingsAsMap, String analyticsId, Clock clock) {
-        Map<String, Object> metadata = getOrPutDefault(mappingsAsMap, META, HashMap::new);
+    private static Object extractMapping(String path, Map<String, Object> mappingsProperties) {
+        return extractValue(String.join("." + PROPERTIES + ".", path.split("\\.")), mappingsProperties);
+    }
+
+    private static Map<String, Object> createMetaData(String analyticsId, Clock clock) {
+        Map<String, Object> metadata = new HashMap<>();
         metadata.put(CREATION_DATE_MILLIS, clock.millis());
         metadata.put(CREATED_BY, "data-frame-analytics");
         metadata.put(VERSION, Map.of(CREATED, Version.CURRENT));
         metadata.put(ANALYTICS, analyticsId);
+        return metadata;
     }
 
     @SuppressWarnings("unchecked")
@@ -176,17 +207,41 @@ public final class DataFrameAnalyticsIndex {
         return value;
     }
 
-    public static void updateMappingsToDestIndex(Client client, DataFrameAnalyticsConfig analyticsConfig, GetIndexResponse getIndexResponse,
+    @SuppressWarnings("unchecked")
+    public static void updateMappingsToDestIndex(Client client, DataFrameAnalyticsConfig config, GetIndexResponse getIndexResponse,
                                                  ActionListener<AcknowledgedResponse> listener) {
         // We have validated the destination index should match a single index
         assert getIndexResponse.indices().length == 1;
 
-        Map<String, Object> addedMappings = Map.of(PROPERTIES, Map.of(ID_COPY, Map.of("type", "keyword")));
+        // Fetch mappings from destination index
+        Map<String, Object> destMappingsAsMap = getIndexResponse.mappings().valuesIt().next().sourceAsMap();
+        Map<String, Object> destPropertiesAsMap =
+            (Map<String, Object>)destMappingsAsMap.getOrDefault(PROPERTIES, Collections.emptyMap());
 
-        PutMappingRequest putMappingRequest = new PutMappingRequest(getIndexResponse.indices());
-        putMappingRequest.source(addedMappings);
-        ClientHelper.executeWithHeadersAsync(analyticsConfig.getHeaders(), ML_ORIGIN, client, PutMappingAction.INSTANCE,
-            putMappingRequest, listener);
+        // Verify that the results field does not exist in the dest index
+        checkResultsFieldIsNotPresentInProperties(config, destPropertiesAsMap);
+
+        // Determine mappings to be added to the destination index
+        Map<String, Object> addedMappings =
+            Map.of(PROPERTIES, createAdditionalMappings(config, Collections.unmodifiableMap(destPropertiesAsMap)));
+
+        // Add the mappings to the destination index
+        PutMappingRequest putMappingRequest =
+            new PutMappingRequest(getIndexResponse.indices())
+                .source(addedMappings);
+        ClientHelper.executeWithHeadersAsync(
+            config.getHeaders(), ML_ORIGIN, client, PutMappingAction.INSTANCE, putMappingRequest, listener);
+    }
+
+    private static void checkResultsFieldIsNotPresentInProperties(DataFrameAnalyticsConfig config, Map<String, Object> properties) {
+        String resultsField = config.getDest().getResultsField();
+        if (properties.containsKey(resultsField)) {
+            throw ExceptionsHelper.badRequestException(
+                "A field that matches the {}.{} [{}] already exists; please set a different {}",
+                DataFrameAnalyticsConfig.DEST.getPreferredName(),
+                DataFrameAnalyticsDest.RESULTS_FIELD.getPreferredName(),
+                resultsField,
+                DataFrameAnalyticsDest.RESULTS_FIELD.getPreferredName());
+        }
     }
 }
-
